--- a/CULLinary/Packages/manifest.json
+++ b/CULLinary/Packages/manifest.json
@@ -8,6 +8,8 @@
     "com.unity.ide.vscode": "1.2.3",
     "com.unity.postprocessing": "3.0.3",
     "com.unity.probuilder": "4.4.0",
+    "com.unity.render-pipelines.high-definition-config": "file:../LocalPackages/com.unity.render-pipelines.high-definition-config",
+    "com.unity.render-pipelines.universal": "10.2.2",
     "com.unity.test-framework": "1.1.20",
     "com.unity.textmeshpro": "3.0.1",
     "com.unity.timeline": "1.4.5",
